--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   </head>
   <body>
 
-    <h2>Práctica D3 Javier Miguel</h2>
+    <h1>Práctica D3 Javier Miguel</h2>
 
-    <div id="grafica-xy"></div>
-
+    <h2>Chart 2</h2>
+    <p>Crear una gráfica que en el eje Y tenga el número de propiedades
+    y en el eje X el número de habitaciones de un barrio.</p>
+    <div id="chart2"></div>
 
     <script src="js/libs/d3.v5.min.js"></script>
-    <script src="js/grafica-xy.js"></script>
+    <script src="js/chart2.js"></script>
   </body>
 </html>
