--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
 
     <h1>Práctica D3 Javier Miguel</h2>
 
+    <h2>Chart 3</h2>
+    <p>Crear una gráfica que dibuje una regresión lineal de alguna de las características con respecto al precio en un barrio.</p>
+    <div id="chart3"></div>
+
     <h2>Chart 2</h2>
     <p>Crear una gráfica que en el eje Y tenga el número de propiedades
     y en el eje X el número de habitaciones de un barrio.</p>
     <div id="chart2"></div>
 
     <script src="js/libs/d3.v5.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/chart2.js"></script>
+    <script src="js/chart3.js"></script>
   </body>
 </html>
