fix bars chart2, color

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <html>
+
   <head>
     <title>Práctica D3 JMG</title>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
   </head>
+
   <body>
 
     <h1>Práctica D3 Javier Miguel</h2>
 
-    <h2>Chart 3</h2>
+    <div>
+      Elige un barrio: <select id="barrio-select" onchange="barrioChanged()"></select>
+    </div>
+
+    <!-- <h2>Chart 3</h2>
     <p>Crear una gráfica que dibuje una regresión lineal de alguna de las características con respecto al precio en un barrio.</p>
-    <div id="chart3"></div>
+    <div id="chart3"></div> -->
 
     <h2>Chart 2</h2>
     <p>Crear una gráfica que en el eje Y tenga el número de propiedades
