--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
       Elige un barrio: <select id="barrio-select" onchange="barrioChanged()"></select>
     </div>
 
-    <!-- <h2>Chart 3</h2>
-    <p>Crear una gráfica que dibuje una regresión lineal de alguna de las características con respecto al precio en un barrio.</p>
-    <div id="chart3"></div> -->
+    <h2>Chart 1</h2>
+    <p></p>
+    <div id="chart1"></div>
 
     <h2>Chart 2</h2>
     <p>Crear una gráfica que en el eje Y tenga el número de propiedades
     y en el eje X el número de habitaciones de un barrio.</p>
     <div id="chart2"></div>
+
+    <h2>Chart 3</h2>
+    <p>Crear una gráfica que dibuje una regresión lineal de alguna de las características con respecto al precio en un barrio.</p>
+    <div id="chart3"></div>
 
     <script src="js/libs/d3.v5.min.js"></script>
     <script src="js/main.js"></script>
