--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <div id="chart3"></div>
 
     <script src="js/libs/d3.v5.min.js"></script>
-    <script src="https://unpkg.com/topojson@3"></script>
-
+    <!-- <script src="https://unpkg.com/topojson@3"></script> -->
     <script src="js/main.js"></script>
     <script src="js/chart1.js"></script>
     <script src="js/chart2.js"></script>
